package com.lld.interviewquestions.book_my_show.entities;

public class Movie {

    private final String name;
    //duration

    public Movie(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }
}


