package com.lld.interviewquestions.book_my_show.enums;

public enum City {
    BANGALORE,
    DELHI
}


