package com.lld.interviewquestions.book_my_show.enums;

public enum SeatStatus {
    AVAILABLE, LOCKED, BOOKED
}
