package com.lld.interviewquestions.paymentgateway.user;

public class UserDO {

    int id;
    String name;
    String mail;

    public UserDO() {

    }

    public UserDO(int id, String name, String mail) {
        this.id = id;
        this.name = name;
        this.mail = mail;
    }

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getMail() {
        return mail;
    }

    public void setMail(String mail) {
        this.mail = mail;
    }

    @Override
    public String toString() {
        return "UserDO [uId=" + id + ", name=" + name + ", email=" + mail + "]";
    }
}
